1.0.1
- Forcing encoding to be UTF-8 on Mac and Linux to temporarily fix
  encoding errors when freezing the binary.
- Data files now load from the same directory as the running script
  rather than the current working directory.
- Added a line in "help" to direct user to see "pradfile" if he/she
  doesn't know the possible primitives.